# taut

./: .codecov.yml  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  generate_knot.py  pyproject.toml
.github/workflows/: release-gate-mcp.yml  release-gate-pg.yml  release-gate-summon.yml  release-gate.yml  release.yml  test-mcp-extension.yml  test-pg-extension.yml  test.yml
assets/: gen_taut_logo.py
docs/: README.md  coalescing.md  lessons.md
docs/agent-context/: README.md  context.index.yaml  decision-hierarchy.md  engineering-principles.md  lessons.md  principles.md
docs/implementation/: 00-implementation-index.md  01-documentation-system.md  02-repository-map.md  03-agent-inventory.md  04-taut-architecture.md  05-taut-summon-architecture.md  06-command-extensions.md  07-taut-mcp-architecture.md  README.md
docs/plans/: 2026-06-12-taut-0.1.1-hardening-plan.md  2026-06-12-taut-foundation-plan.md  2026-06-17-github-actions-release-workflows-plan.md  2026-06-17-github-release-helper-plan.md  2026-06-17-implementation-review-followups-plan.md  2026-06-17-taut-pg-extension-plan.md  2026-06-18-member-identity-addressing-plan.md  2026-06-18-simplebroker-latest-timestamp-plan.md  2026-06-30-assets-reference-cleanup-plan.md  2026-06-30-client-module-split-plan.md  2026-07-01-schema-shim-retirement-plan.md  2026-07-01-taut-state-sql-dialect-plan.md  2026-07-01-taut-watch-runtime-plan.md  2026-07-06-evaluation-findings-remediation-plan.md  2026-07-06-taut-summon-plan.md  2026-07-06-taut-summon-spec-draft.md  2026-07-07-taut-summon-pty-harness-adapter-plan.md  2026-07-08-release-helper-simplebroker-port-plan.md  2026-07-08-taut-sqlite-contention-hardening-plan.md  2026-07-09-taut-reactor-safety-plan.md  2026-07-10-ci-failure-remediation-plan.md  2026-07-10-taut-dynamic-native-waiter-replacement-plan.md  2026-07-10-taut-summon-quality-remediation-plan.md  2026-07-11-multi-factor-review-remediation-plan.md  2026-07-11-v0.5.2-coordinated-release-plan.md  2026-07-12-automatic-display-name-capitalization-plan.md  2026-07-12-lazy-command-extensions-and-rich-tui-composition-plan.md  2026-07-13-bounded-summon-process-test-parallelism-plan.md  2026-07-13-ci-speed-determinism-release-evidence-plan.md  2026-07-13-release-metadata-preparation-plan.md  2026-07-13-summon-stop-release-race-plan.md  2026-07-14-agent-guidance-propagation-plan.md  2026-07-14-agent-interfaces-runbook-adoption-plan.md  2026-07-14-blank-message-no-op-plan.md  2026-07-14-routine-release-classification-plan.md  2026-07-14-single-project-config-source-spec-plan.md  2026-07-14-smaller-quality-followups-plan.md  2026-07-14-taut-mcp-extension-plan.md  2026-07-14-taut-tui-cross-reference-correction-plan.md  2026-07-14-terminal-output-safety-plan.md  (+6 more)
docs/specs/: 00-specs-index.md  01-development-documentation-operating-model.md  02-taut-core.md  03-identity-addressing-notifications.md  04-summon.md  05-taut-mcp.md  README.md
extensions/taut_mcp/: README.md  pyproject.toml
extensions/taut_mcp/taut_mcp/: __init__.py  __main__.py  _claude_channel.py  _commands.py  _connection_reactor.py  _tools.py  _workspace_reactor.py  cli.py  server.py
extensions/taut_mcp/tests/: conftest.py  test_claude_channel.py  test_connection_reactor.py  test_pg_conformance.py  test_resource.py  test_stdio_server.py  test_tools.py
extensions/taut_pg/: README.md  pyproject.toml
extensions/taut_pg/taut_pg/: __init__.py
extensions/taut_pg/tests/: conftest.py  test_pg_integration.py  test_pg_sidecar.py  test_reactor.py
extensions/taut_summon/: README.md  pyproject.toml
extensions/taut_summon/taut_summon/: __init__.py  __main__.py  _adapter.py  _broker_retry.py  _claude.py  _control.py  _driver.py  _members.py  _persona.py  _pty.py  _retry.py  _scripted.py  _state.py  _stream.py  cli.py  command_manifest.py  controller.py  interaction.py  models.py  scripted_provider.py
extensions/taut_summon/taut_summon/commands/: __init__.py  dismiss.py  summon.py
extensions/taut_summon/tests/: conftest.py  test_claude_adapter.py  test_conformance.py  test_control.py  test_controller.py  test_driver.py  test_interaction.py  test_live_harness.py  test_live_local_llm.py  test_persona.py  test_pty_adapter.py  test_scripted_adapter.py  test_state.py  test_summon_cli.py
extensions/taut_summon/tests/fixtures/: claude_stream_sample.jsonl  fake_tui.py  local_llm_tui.py
skills/: README.md
skills/brainstorming-to-plan/: SKILL.md
skills/call-agent/: SKILL.md
skills/coalescing/: SKILL.md
skills/debugging/: SKILL.md
taut/: __init__.py  __main__.py  _broker_retry.py  _constants.py  _exceptions.py  _message_text.py  _queue.py  _scripts.py  _watch_runtime.py  addressing.py  cli.py  client.py  defaults.toml  envelope.py  identity.py  schema.py  terminal.py  watcher.py
taut/client/: __init__.py  _base.py  _codec.py  _identity.py  _messaging.py  _models.py  _notifications.py  _threads.py  _watching.py
taut/commands/: __init__.py  _builtins.py  _dispatch.py  _imports.py  _protocol.py  _registry.py  _rendering.py  _summon_compat.py  (+15 more)
tests/: __init__.py  conftest.py  test_addressing.py  test_architecture_boundaries.py  test_broker_retry.py  test_cli.py  test_cli_probes.py  test_client.py  test_client_stateful.py  test_command_registry.py  test_constants.py  test_core_summon_wheel_matrix.py  test_coverage_evidence.py  test_dev_scripts.py  test_docs_references.py  test_envelope.py  test_github_workflows.py  test_harness.py  test_identity.py  test_identity_performance.py  test_installed_wheel_collection.py  test_lazy_imports.py  test_message_text.py  test_project_config.py  test_project_metadata_consistency.py  test_public_api.py  test_reactor_artifact_compat.py  test_release_artifact.py  test_release_script.py  test_require_green_workflows.py  test_required_coverage_paths.py  test_schema.py  test_shared_contract.py  test_state_contract.py  test_terminal_text.py  test_unread_performance.py  test_watcher.py
tests/fixtures/taut_command_plugin/: pyproject.toml
tests/fixtures/taut_command_plugin/taut_command_plugin/: __init__.py  command.py  manifest.py
(+17 files in other folders)
