[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taut"
version = "0.2.0"
description = "Private, no-config chat with agents and humans in your terminal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "Van Lindberg", email = "van.lindberg@gmail.com"},
]
keywords = ["chat", "sqlite", "cli", "agents", "simplebroker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "simplebroker>=4.7.1",
    "psutil>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "hypothesis>=6.100",
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.1.0",
    "simplebroker-pg>=2.2.1",
    "types-psutil>=6.0",
]

[project.scripts]
taut = "taut.cli:main"

[project.urls]
Homepage = "https://github.com/VanL/taut"
Documentation = "https://github.com/VanL/taut#readme"
Repository = "https://github.com/VanL/taut.git"
Issues = "https://github.com/VanL/taut/issues"

[tool.uv.sources]
taut-pg = { path = "./extensions/taut_pg", editable = true }

[tool.hatch.build]
include = [
    "/taut/**/*.py",
    "/taut/py.typed",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/.agents",
    "/.github",
    "/tests",
    ".*",
    "*.db",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers -m 'not slow' -n auto --dist loadgroup"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "shared: backend-agnostic tests that should pass on SQLite and Postgres",
    "sqlite_only: tests that validate built-in SQLite/path behavior",
    "pg_only: tests that validate the Postgres extension package",
]

[tool.mypy]
python_version = "3.14"
no_namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["taut"]

[tool.coverage.run]
source = ["taut"]
parallel = true
concurrency = ["thread", "multiprocessing"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
show_missing = true
skip_empty = true
