[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taut-mcp"
version = "0.7.1"
description = "MCP extension for attaching agent sessions to Taut workspaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "Van Lindberg", email = "van.lindberg@gmail.com"},
]
dependencies = [
    "mcp>=1.28.1,<2",
    "taut>=0.7.1",
]

[project.scripts]
taut-mcp = "taut_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.1.0",
    "taut-pg>=0.7.1",
    "types-jsonschema>=4.0",
]

[tool.uv.sources]
taut = { path = "../..", editable = true }
taut-pg = { path = "../taut_pg", editable = true }

[tool.hatch.build]
include = [
    "/taut_mcp/**/*.py",
    "/taut_mcp/py.typed",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers -n auto --dist loadgroup"
markers = [
    "installed_wheel: tests that build and run isolated installed artifacts",
    "pg_only: tests that validate the Postgres extension package",
    "sqlite_only: tests that validate built-in SQLite/path behavior",
]

[tool.mypy]
python_version = "3.11"
no_namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["taut", "taut_mcp"]
