[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taut-summon"
version = "0.1.0"
description = "Summon extension for Taut: host an agent harness as a workspace member"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "Van Lindberg", email = "van.lindberg@gmail.com"},
]
dependencies = [
    # Floor is the core version shipping the `summon`/`dismiss` delegation
    # verbs and the blessed identity/state surfaces this extension builds on.
    "taut>=0.4.7",
]

[project.scripts]
taut-summon = "taut_summon.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
taut = { path = "../..", editable = true }

[tool.hatch.build]
include = [
    "/taut_summon/**/*.py",
    "/taut_summon/py.typed",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# Deliberately serial (no -n): the driver tests each run a real
# three-process pipeline (driver + scripted provider + CLI writers);
# parallel workers oversubscribe the machine and starve the watchers'
# poll cycles into wait-budget timeouts.
addopts = "-ra -q --strict-markers"
markers = [
    "requires_claude: live smoke tests that spawn the installed claude CLI (skipped when absent)",
    "requires_live_harness: live PTY harness smoke tests; local by default, CI opt-in",
    "requires_local_llm: local-LLM-backed PTY smoke tests; local by default, prepared CI opt-in",
    "requires_codex: live smoke tests that spawn the installed codex CLI",
    "requires_coder: live smoke tests that spawn the installed coder CLI",
    "requires_grok: live smoke tests that spawn the installed grok CLI",
    "requires_qwen: live smoke tests that spawn the installed qwen CLI",
    "requires_kimi: live smoke tests that spawn the installed kimi CLI",
    "requires_opencode: live smoke tests that spawn the installed opencode CLI",
    "requires_pi: live smoke tests that spawn the installed pi CLI",
]
